use special symbols

--- a/pynetics/solvers/plugin_backends/Makefile
+++ b/pynetics/solvers/plugin_backends/Makefile
@@ -10,16 +10,16 @@ LDFLAGS = -shared
 OBJS = kmc_functions.o kmc_functions_wrap.o
 
 _kmc_functions.so: kmc_functions.o kmc_functions_wrap.o
-	$(CC) $(LDFLAGS) kmc_functions.o kmc_functions_wrap.o -o _kmc_functions.so
+	$(CC) $(LDFLAGS) $^ -o $@
 
 kmc_functions.o: kmc_functions.c
-	$(CC) $(CCFLAGS) kmc_functions.c
+	$(CC) $(CCFLAGS) $^
 
 kmc_functions_wrap.o: kmc_functions_wrap.c
-	$(CC) $(CCFLAGS) kmc_functions_wrap.c
+	$(CC) $(CCFLAGS) $^
 
 kmc_functions_wrap.c: kmc_functions.i
-	$(SWIG) $(SWIGFLAGS) kmc_functions.i
+	$(SWIG) $(SWIGFLAGS) $^
 
 clean:
-	rm kmc_functions_wrap.c kmc_functions.py _kmc_functions.so *.o *.pyc
+	rm -rf kmc_functions_wrap.c kmc_functions.py _kmc_functions.so *.o *.pyc
