--- a/pynetics/solvers/plugin_backends/Makefile
+++ b/pynetics/solvers/plugin_backends/Makefile
@@ -7,19 +7,20 @@ SWIG = swig
 SWIGFLAGS = -python 
 CCFLAGS = -O3 -fPIC -c 
 LDFLAGS = -shared
-OBJS = kmc_functions.o kmc_functions_wrap.o
+EXTNAME = kmc_functions
 
-_kmc_functions.so: kmc_functions.o kmc_functions_wrap.o
+_kmc_functions.so: build/kmc_functions.o build/kmc_functions_wrap.o
 	$(CC) $(LDFLAGS) $^ -o $@
 
-kmc_functions.o: kmc_functions.c
-	$(CC) $(CCFLAGS) $^
+build/kmc_functions.o: src/kmc_functions.c
+	$(CC) $(CCFLAGS) -I include $< -o $@
 
-kmc_functions_wrap.o: kmc_functions_wrap.c
-	$(CC) $(CCFLAGS) $^
+build/kmc_functions_wrap.o: wrap/kmc_functions_wrap.c
+	$(CC) $(CCFLAGS) -I include $< -o $@
 
-kmc_functions_wrap.c: kmc_functions.i
+wrap/kmc_functions_wrap.c: wrap/kmc_functions.i
 	$(SWIG) $(SWIGFLAGS) $^
+	mv wrap/*py ./
 
 clean:
-	rm -rf kmc_functions_wrap.c kmc_functions.py _kmc_functions.so *.o *.pyc
+	rm -rf build/* wrap/$(EXTNAME)_wrap.c $(EXTNAME).py *.so
