move C code to CExtension

--- a/CExtension/Makefile
+++ b/CExtension/Makefile
@@ -8,6 +8,7 @@ SWIGFLAGS = -python
 CCFLAGS = -O3 -fPIC -c 
 LDFLAGS = -shared
 EXTNAME = kmc_functions
+EXTDIR = ../pynetics/solvers/plugin_backends
 
 _kmc_functions.so: build/kmc_functions.o build/kmc_functions_wrap.o
 	$(CC) $(LDFLAGS) $^ -o $@
@@ -22,5 +23,11 @@ wrap/kmc_functions_wrap.c: wrap/kmc_functions.i
 	$(SWIG) $(SWIGFLAGS) $^
 	mv wrap/*py ./
 
+install:
+	cp _$(EXTNAME).so $(EXTNAME).py $(EXTDIR)
+
 clean:
 	rm -rf build/* wrap/$(EXTNAME)_wrap.c $(EXTNAME).py *.so
+
+uninstall:
+	rm -f $(EXTDIR)/$(EXTNAME).py $(EXTDIR)/_$(EXTNAME).so
