--- a/extensions/unittest/Makefile
+++ b/extensions/unittest/Makefile
@@ -1,3 +1,7 @@
+# Makefile for extension testcase build.
+# Author: zjshao<shaozhengjiang@gmail.com>
+# Dare  : 2015.12.30
+
 CC = gcc
 INC = -I /usr/local/include/CUnit -I ../include/
 LIB = -L /usr/local/lib
@@ -7,4 +11,4 @@ test.x: $(FUNCDIR)/kmc_functions.c test_kmc_functions.c
 	$(CC) -o $@ $(INC) $(LIB) $^ -lcunit
 
 clean:
-	rm -f test.x
+	rm -f test.x *.xml
