--- a/extensions/Makefile
+++ b/extensions/Makefile
@@ -1,23 +1,25 @@
 # Makefile for kmc analysis C extension
 # Author: shaozhengjiang<shaozhengjiang@gmail.com>
 # Date : 2015.12.29
+# ModifyDate: 2016.1.6
 
 CC = gcc
 SWIG = swig
 SWIGFLAGS = -python 
 CCFLAGS = -O3 -fPIC -c 
 LDFLAGS = -shared
+OMPFLAG = -fopenmp
 EXTNAME = kmc_functions
 EXTDIR = ../pynetics/solvers/plugin_backends
 
 _kmc_functions.so: build/kmc_functions.o build/kmc_functions_wrap.o
-	$(CC) $(LDFLAGS) $^ -o $@
+	$(CC) $(OMPFLAG) $(LDFLAGS) $^ -o $@
 
 build/kmc_functions.o: src/kmc_functions.c
-	$(CC) $(CCFLAGS) -I include $< -o $@
+	$(CC) $(OMPFLAG) $(CCFLAGS) -I include $< -o $@
 
 build/kmc_functions_wrap.o: wrap/kmc_functions_wrap.c
-	$(CC) $(CCFLAGS) -I include $< -o $@
+	$(CC) $(OMPFLAG) $(CCFLAGS) -I include $< -o $@
 
 wrap/kmc_functions_wrap.c: wrap/kmc_functions.i
 	$(SWIG) $(SWIGFLAGS) $^
