add numpy include path

--- a/extensions/Makefile
+++ b/extensions/Makefile
@@ -1,13 +1,14 @@
 # Makefile for kmc analysis C extension
 # Author: shaozhengjiang<shaozhengjiang@gmail.com>
 # Date : 2015.12.29
-# ModifyDate: 2016.1.6
+# ModifyDate: 2016.1.7
 
 CC = gcc
 SWIG = swig
 SWIGFLAGS = -python 
 CCFLAGS = -O3 -fPIC -c 
 OMPFLAG = # -fopenmp
+INC = # -I /usr/local/lib/python2.7/site-packages/numpy/core/include 
 LDFLAGS = -shared
 EXTNAME = kmc_functions
 EXTDIR = ../pynetics/solvers/plugin_backends
@@ -16,10 +17,10 @@ _kmc_functions.so: build/kmc_functions.o build/kmc_functions_wrap.o
 	$(CC) $(OMPFLAG) $(LDFLAGS) $^ -o $@
 
 build/kmc_functions.o: src/kmc_functions.c
-	$(CC) $(OMPFLAG) $(CCFLAGS) -I include $< -o $@
+	$(CC) $(OMPFLAG) $(CCFLAGS) $(INC) -I include $< -o $@
 
 build/kmc_functions_wrap.o: wrap/kmc_functions_wrap.c
-	$(CC) $(OMPFLAG) $(CCFLAGS) -I include $< -o $@
+	$(CC) $(OMPFLAG) $(CCFLAGS) $(INC) -I include $< -o $@
 
 wrap/kmc_functions_wrap.c: wrap/kmc_functions.i
 	$(SWIG) $(SWIGFLAGS) $^
