--- a/.gitignore
+++ b/.gitignore
@@ -58,11 +58,11 @@ Temporary Items
 *_wrap.c
 kynetix/solvers/plugin_backends/data.py
 kynetix/solvers/plugin_backends/kmc_functions.py
-extensions/*.py
+c++/*.py
 *_wrap.cxx
 
 # unittest files
-extensions/unittest/*.xml
+c++/unittest/*.xml
 
 # vim temp files
 *.swp
