--- a/c++/Makefile
+++ b/c++/Makefile
@@ -1,13 +1,13 @@
 # Makefile for kmc analysis C++ extension
 # Author : shaozhengjiang<shaozhengjiang@gmail.com>
 # Date   : 2015-12-29
-# Update : 2016-09-22
+# Update : 2016-11-07
 
 CXX = g++
 SWIG = swig
 SWIGFLAGS = -python -c++ -Wall -Werror
-CPPFLAGS = -O3 -fPIC -std=c++11 -c -Wall -Werror
-INC = # -I /usr/local/lib/python2.7/site-packages/numpy/core/include 
+CPPFLAGS = -O3 -fPIC -std=c++0x -c -Wall -Werror
+INC = -I/usr/include/python2.7/
 LDFLAGS = -shared
 EXTNAME = kmc_functions
 EXTDIR = ../kynetix/solvers/kmc_plugins/plugin_backends
@@ -18,7 +18,7 @@ _kmc_functions.so: kmc_functions.o kmc_functions_wrap.o
 	mv *.o build
 
 kmc_functions.o: src/kmc_functions.cpp
-	$(CXX) $(CPPFLAGS) $(INC) -I include $< -o $@
+	$(CXX) $(CPPFLAGS) -I include $< -o $@
 
 kmc_functions_wrap.o: wrap/kmc_functions_wrap.cxx
 	$(CXX) $(CPPFLAGS) $(INC) -I include $< -o $@
