--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,7 @@ auto_*
 examples/*/trajplots/
 examples/*/plot_*
 examples/*/traj/
+examples/KMC/CO-Oxidation-Pt-100/10x10/superposition/scripts/input_*_out.py
 
 # kmc_plot scripts
 plot_coverages.py
