--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-cycler==0.10.0
-gmpy2==2.0.8
-matplotlib==1.5.2
-mpmath==0.19
-numpy==1.11.1
-prettytable==0.7.2
-pyparsing==2.1.8
-python-dateutil==2.5.3
-pytz==2016.6.1
-scipy==0.18.0
-six==1.10.0
-sympy==1.0
+matplotlib>=1.5.2
+mpmath>=0.19
+numpy>=1.11.1
+prettytable>=0.7.2
+scipy>=0.18.0
+sympy>=1.0
+
