--- a/c++/src/CMakeLists.txt
+++ b/c++/src/CMakeLists.txt
@@ -1,3 +1,6 @@
+# Author: Shao Zhengjiang<shaozhengjiang@gmail.com>
+# Date  : 2017-03-23
+
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
 file(GLOB Cppfiles *.cpp)
