--- a/c++/wrap/CMakeLists.txt
+++ b/c++/wrap/CMakeLists.txt
@@ -1,3 +1,6 @@
+# Author: Shao Zhengjiang<shaozhengjiang@gmail.com>
+# Date  : 2017-03-23
+
 find_package(SWIG REQUIRED)
 include(${SWIG_USE_FILE})
 
