--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-matplotlib>=1.5.2
-mpmath>=0.19
 numpy>=1.11.1
-prettytable>=0.7.2
 scipy>=0.18.0
+matplotlib>=1.5.2
 sympy>=1.0
+mpmath>=0.19
+mpi4py>=2.0.0
+prettytable>=0.7.2
 
