--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docs"]
 	path = docs
 	url = git@github.com:PytLab/mikiac-docs.git
+[submodule "mikiac/plotters/catplot"]
+	path = mikiac/plotters/catplot
+	url = git@github.com:PytLab/catplot.git
